Thu Nov 14 01:11:54 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/lib/bigdecimal/util.rb: [DOC] +precision+ is required

Wed Nov 13 19:21:36 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/lib/bigdecimal/util.rb: [DOC] Document the required
	  +precision+ argument for Rational#to_d [Bug #8958]

Wed Nov 13 19:02:05 2013  Zachary Scott  <e@zzak.io>

	* ext/digest/*: [DOC] Fix several typos and broken http links.
	  Improved examples for Digest overview and fixed a broken example in
	  Digest::HMAC overview. This patch also adds a description of
	  Digest::SHA256.bubblebabble to the Digest overview.

	  Patched by @stomar [Bug #9027]

Wed Nov 13 18:32:12 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_config.c: [DOC] Document the following:

	  - OpenSSL::ConfigError
	  - OpenSSL::Config::DEFAULT_CONFIG_FILE

	  Patched by @vbatts via GH-436
	  https://github.com/ruby/ruby/pull/436

Wed Nov 13 18:03:00 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_asn1.c: [DOC] Document parts of
	  OpenSSL::ASN1::ObjectId included a fix for the class overview, which
	  previously showed the documentation for Constructive due to missing
	  ObjectId overview. This patch also includes a note for Primitive.

	  Based on a patch by @vbatts via GH-436
	  https://github.com/ruby/ruby/pull/436

Wed Nov 13 17:19:36 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/config.rb: In #parse use +string+ for +str+

Wed Nov 13 17:09:45 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/*.rb: [DOC] Document the following:

	  - Integer#to_bn
	  - OpenSSL::Buffering module
	  - Deprecated OpenSSL::Digest::Digest compatibility class
	  - OpenSSL::Config

	  These changes were based on a patch by @vbatts via GH-436
	  https://github.com/ruby/ruby/pull/436

Wed Nov 13 10:55:43 2013  Zachary Scott  <e@zzak.io>

	* doc/regexp.rdoc: [DOC] Fix typo in Special global variables section.
	  Reported by Alex Johnson on ruby-doc.org
